--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -20,13 +20,13 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.TESTING }}
         run: |
-          git clone https://${{ secrets.TESTING }}@github.com/TITUS-2-0/datasets.git datasets
+          git clone https://$GITHUB_TOKEN@github.com/TITUS-2-0/datasets.git datasets
 
       - name: Copy Tests to Subrepo
         run: |
           cp -r datasets/tests ./tests
-          cp datasets/titus_tei_lite.dtd ./
-          cp datasets/tei_lite.dtd ./
+          cp datasets/titus_tei.dtd ./
+          cp datasets/tei_all.dtd ./
           cp datasets/requirements.txt ./
 
       - name: Set Up Python
