tattv: lg change

--- a/drafts/tattv.yaml
+++ b/drafts/tattv.yaml
@@ -18,17 +18,17 @@
       - s[n=15]: avagrahehāvāya dhāraṇāḥ
       - s[n=16]:
         - bahu bahuvidha kṣipra niśrita sandigdha dhruvāṇāṃ setarāṇām
-        - note[lg=deu-Latn]: not in sarvārthasiddhi
+        - note[lg=eng-Latn]: not in sarvārthasiddhi
       - s[n=16a]:
         - bahu bahuvidha kṣiprā niḥsr̥tānukta dhruvāṇāṃ setarāṇām
-        - note[lg=deu-Latn]: variant sarvārthasiddhi
+        - note[lg=eng-Latn]: variant sarvārthasiddhi
       - s[n=17]: arthasya
       - s[n=18]: vyañjanasyāvagrahaḥ
       - s[n=19]: na cakṣuranindriyābhyām
       - s[n=20]: śrutaṃ matipūrvaṃ dvyaneka dvādaśabhedam
       - s[n=21]:
         - dvividho'vadhiḥ
-        - note[lg=deu-Latn]: not in sarvārthasiddhi
+        - note[lg=eng-Latn]: not in sarvārthasiddhi
       - s[n=22]: bhavapratyayo nārakadevāṇāṃ
       - s[n=23]: yathoktanimittaḥ ṣaḍvikalpaḥ śeṣāṇāṃ
       - s[n=24]: r̥juvipulamatī manaḥ paryayaḥ
@@ -43,13 +43,13 @@
       - s[n=33]: sadasator aviśeṣād yadr̥cchopalabdher unmattavat
       - s[n=34]:
         - naigama saṃgraha vyavahāra rjusūtra śabda samabhirūḍa evaṃbhūtā nayāḥ
-        - note[lg=deu-Latn]: not in sarvārthasiddhi
+        - note[lg=eng-Latn]: not in sarvārthasiddhi
       - s[n=34a]:
         - naigama saṃgraha vyavahāra rjusūtra śabda samabhirūḍa evaṃbhūtā nayāḥ
-        - note[lg=deu-Latn]: variant sarvārthasiddhi
+        - note[lg=eng-Latn]: variant sarvārthasiddhi
       - s[n=35]:
         - ādya-śabdau dvi tri bhedau
-        - note[lg=deu-Latn]: not in sarvārthasiddhi
+        - note[lg=eng-Latn]: not in sarvārthasiddhi
         - .
   - adhyaya[n=2]:
     - p:
@@ -69,11 +69,11 @@
       - s[n=12]: saṃsāriṇastrasasthāvarāḥ
       - s[n=13]:
         - pr̥thivyambuvanaspatayaḥ sthāvarāḥ
-        - note[lg=deu-Latn]: not in sarvārthasiddhi
+        - note[lg=eng-Latn]: not in sarvārthasiddhi
       - s[n=13a]: pr̥thivyaptejovāyuvanaspatayaḥ sthāvarāḥ
       - s[n=14]:
         - tejovāyūdvīndriyādayaś ca trasāḥ
-        - note[lg=deu-Latn]: not in sarvārthasiddhi
+        - note[lg=eng-Latn]: not in sarvārthasiddhi
       - s[n=14a]: dvīndriyādayastrasāḥ
       - s[n=15]: paṃcedriyāṇi
       - s[n=16]: dvididhāni
@@ -81,13 +81,13 @@
       - s[n=18]: labdhyupayogau bhāvendriyam
       - s[n=19]:
         - upayogaḥ sparśādiṣu 19
-        - note[lg=deu-Latn]: not in sarvārthasiddhi
+        - note[lg=eng-Latn]: not in sarvārthasiddhi
       - s[n=20]: sparśanarasana ghrāṇacakṣuḥ śrotrāṇi
       - s[n=21]: sparśanarasagāndhavarṇaśabdāstadarthāḥ
       - s[n=22]: śrutamanindriyasya
       - s[n=23]:
         - vāyvantānām ekam
-        - note[lg=deu-Latn]: not in sarvārthasiddhi
+        - note[lg=eng-Latn]: not in sarvārthasiddhi
       - s[n=23a]: vanaspatyantānāmekam
       - s[n=24]: kr̥mipipīlikā bhramara manuṣyādīnāmekaika vr̥ddhāni
       - s[n=25]: saṃjñinaḥ samanaskāḥ
@@ -98,7 +98,7 @@
       - s[n=30]: eka samayāvigrahā
       - s[n=31]:
         - ekaṃ dvau vā nāhārakaḥ 31
-        - note[lg=deu-Latn]: not in sarvārthasiddhi
+        - note[lg=eng-Latn]: not in sarvārthasiddhi
       - s[n=31a]: ekaṃ dvai trīnvānāhārakaḥ
       - s[n=32]: sammūrcchanagarbhaupapātā janma
       - s[n=33]: sacittaśītasaṃvr̥tāḥsetarā miśrāś caikaśas tad yonayaḥ
@@ -118,22 +118,22 @@
       - s[n=47]: aupapādikaṃ vaigriyikam
       - s[n=48]: labdhipratyayaṃ
       - s[n=49]:
-        - note[lg=deu-Latn]: only in sarvārthasiddhi
+        - note[lg=eng-Latn]: only in sarvārthasiddhi
         - taijasamapi
       - s[n=50]:
         - śubhaṃ viśuddham avyāghāti cāhārakaṃ caturdaśa pūrvadhara eva
-        - note[lg=deu-Latn]: not in sarvārthasiddhi
+        - note[lg=eng-Latn]: not in sarvārthasiddhi
       - s[n=50.]:
         - 1 śubhaṃ viśuddhamavyāghāti cāhārakaṃ pramattasaṃyatasyaiva
-        - note[lg=deu-Latn]: variant sarvārthasiddhi
+        - note[lg=eng-Latn]: variant sarvārthasiddhi
       - s[n=51]: nāraka-saṃmūrcchano napuṃsakāni
       - s[n=52]: na devāḥ
       - s[n=53]:
         - śeṣastrivedāḥ
-        - note[lg=deu-Latn]: only in sarvārthasiddhi
+        - note[lg=eng-Latn]: only in sarvārthasiddhi
       - s[n=54]:
         - aupapātika caramadeha uttamapuruṣā'saṅkhyeyavarṣāyurṣo'napavartyāyuṣaḥ
-        - note[lg=deu-Latn]: not in sarvārthasiddhi
+        - note[lg=eng-Latn]: not in sarvārthasiddhi
       - s[n=54a]: aupapādika caramottamadehā'saṃkhyeya varṣāyuṣonavartyayuṣaḥ
   - adhyaya[n=3]:
     - p:
@@ -153,7 +153,7 @@
           varṣadharaparvatāḥ
       - s[n=12]:
         - hemārjunatapanīya vaiḍūrya rajata hemamayāḥ
-        - note[lg=deu-Latn]: only in sarvārthasiddhi from 12 to 39
+        - note[lg=eng-Latn]: only in sarvārthasiddhi from 12 to 39
       - s[n=13]: maṇivicitraparśvā upari mūle ca tulyavistārāḥ
       - s[n=14]: padmamahāpadmatigiñchakesari mahāpuṇḍarīkapuṇjarīkā hr̥dās teṣāmupari
       - s[n=15]: prathamo yojanasahasrāyāmas tad ardha viṣakambho hr̥daḥ
@@ -188,10 +188,10 @@
       - s[n=1]: devāścaturṇikāyāḥ
       - s[n=2]:
         - tr̥tīyaḥ pītaleśyaḥ
-        - note[lg=deu-Latn]: not in sarvārthasiddhi
+        - note[lg=eng-Latn]: not in sarvārthasiddhi
       - s[n=2a]:
         - āditas triṣu pītānalleśyāḥ
-        - note[lg=deu-Latn]: variant sarvārthasiddhi
+        - note[lg=eng-Latn]: variant sarvārthasiddhi
       - s[n=3]: daśāṣṭapañcaddvādaśavikalpāḥ kalpopapannaparyantāḥ
       - s[n=4]: indrasāmānika trāyastriśapāriṣadātmaraśca lokapālīnāka prakīrṇa kābhiyogya
           kilbiṣi kaścaikaśāḥ
@@ -199,7 +199,7 @@
       - s[n=6]: pūrvayordvīndrā
       - s[n=7]:
         - pītāntaleśyāḥ 7
-        - note[lg=deu-Latn]: not in sarvārthasiddhi
+        - note[lg=eng-Latn]: not in sarvārthasiddhi
       - s[n=8]: kāyapravīcārāḥ ā aiśānāt
       - s[n=9]: śeṣāḥ sparśa-rūpa-śabda-manaḥ pravīcārā dvayor dvayoḥ
       - s[n=10]: pare'pravacīrāḥ
@@ -225,47 +225,47 @@
       - s[n=28]: aupapātika-manuṣyebhyaḥ śeṣās tiryag-yonayaḥ
       - s[n=29]:
         - sthitiḥ
-        - note[lg=deu-Latn]: not in sarvārthasiddhi
+        - note[lg=eng-Latn]: not in sarvārthasiddhi
       - s[n=30]:
         - bhavaneṣu dakṣiṇārdhādhipatīnāṃ palyopamam adhyardham
-        - note[lg=deu-Latn]: idem
+        - note[lg=eng-Latn]: idem
       - s[n=31]:
         - śeṣāṇāṃ pādone
-        - note[lg=deu-Latn]: idem
+        - note[lg=eng-Latn]: idem
       - s[n=32]:
         - asurendrayoh sāgaropamam adhikaṃ ca
-        - note[lg=deu-Latn]: idem
+        - note[lg=eng-Latn]: idem
       - s[n=32a]:
         - sthitir asura nāga suparṇa dvīpa śeṣāṇāṃ sāgaropama tripalyopamārdhahīnamitā
-        - note[lg=deu-Latn]: variant for 4.29-4.32
+        - note[lg=eng-Latn]: variant for 4.29-4.32
       - s[n=33]:
         - saudharmādiṣu yathākramam
-        - note[lg=deu-Latn]: not in sarvārthasiddhi
+        - note[lg=eng-Latn]: not in sarvārthasiddhi
       - s[n=34]:
         - sāgaropame
-        - note[lg=deu-Latn]: idem
+        - note[lg=eng-Latn]: idem
       - s[n=35]:
         - adhike ca
-        - note[lg=deu-Latn]: idem
+        - note[lg=eng-Latn]: idem
       - s[n=36]:
         - saudharmai-śānayoḥ sāgaropame adhike 37
-        - note[lg=deu-Latn]: variant for 4.33-4-35
+        - note[lg=eng-Latn]: variant for 4.33-4-35
       - s[n=37]:
         - sapta sānatkumāre
-        - note[lg=deu-Latn]: not in sarvārthasiddhi
+        - note[lg=eng-Latn]: not in sarvārthasiddhi
       - s[n=38]:
         - viśeṣa tri sapta daśai kādaśa trayodaśa pañcadaśabhir adhikāni ca
-        - note[lg=deu-Latn]: idem
+        - note[lg=eng-Latn]: idem
       - s[n=38a]: sānatkumāra māhendrayoḥ sapta
       - s[n=38a]: tri sapta navai kādaśa trayodaśa pañcadaśabhir adhikāni
       - s[n=39]: āraṇācyutād ūrdhvam ekaikena navasu graiveyakeṣu vijayādiṣu sarvārthasiddhe
           ca
       - s[n=40]:
         - aparā palyopamaṃ adhikam ca
-        - note[lg=deu-Latn]: not in sarvārthasiddhi
+        - note[lg=eng-Latn]: not in sarvārthasiddhi
       - s[n=41]:
         - sagaropame
-        - note[lg=deu-Latn]: 'idem '
+        - note[lg=eng-Latn]: 'idem '
       - s[n=42]: adhike ca
       - s[n=43]: parataḥ parataḥ pūrvā pūrvānantarā
       - s[n=43a]: aparā palyopamam adhikam
@@ -289,7 +289,7 @@
       - s[n=1]: ajīvakāyā dharmādharmākāśapudgalāḥ
       - s[n=2]:
         - dravyāṇi jīvaś ca
-        - note[lg=deu-Latn]: sarvārthasiddhi 2 and 3
+        - note[lg=eng-Latn]: sarvārthasiddhi 2 and 3
       - s[n=3]: nityāvai sthitāny arūpāṇi ca
       - s[n=4]: rūpiṇaḥ pudgalāḥ
       - s[n=5]: ā ākāśād ekadravyāṇi
@@ -327,7 +327,7 @@
       - s[n=36]: dvyadhikādiguṇānāṃ tu
       - s[n=37]:
         - bandhe samādhikau pāriṇāmikau
-        - note[lg=deu-Latn]: not in sarvārthasiddhi
+        - note[lg=eng-Latn]: not in sarvārthasiddhi
       - s[n=37a]: bandhe'dhikau pāriṇāmikau ca
       - s[n=38]: guṇaparyāyavad dravyam
       - s[n=39]: kālaś cetyeke
